# corpus-kb

./: .gitignore  AGENT-GOVERNANCE-SPEC.md  AGENTS.md  CODEOWNERS_TEST.md  DECISIONS.md  DECOMPOSITION-SUMMARY.md  FIXES-COMPLETED.md  PLAN-DUAL-PROTOCOL-EVENTSOURCING.md  PLAN-INSTALL.md  PLAN.md  QUALITY-REVIEW.md  README.md  WAVE-1-2-DECOMPOSITION.md  WAVE-1-2-EXECUTION-GUIDE.md  WAVE-1-2-INDEX.md  WAVE-1-2-QUICK-REFERENCE.md  codemap.md  config.yaml  opencode.json  pyproject.toml
.claude/: CLAUDE.md
.github/: CODEOWNERS
.github/workflows/: agent-governance.yml  branch-validate.yml  ci.yml  commit-validate.yml
corpus-kb/: .gitignore  CI_VALIDATION.md  README.md  config.yaml  pyproject.toml  pyrightconfig.json  verify_implementation.py
corpus-kb/.github/workflows/: agent-governance.yml  branch-validate.yml  ci.yml  commit-validate.yml
corpus-kb/.opencode/: ci-gates.json  opencode.json  validate-ci.py
corpus-kb/.opencode/skills/ci-guard/: SKILL.md
corpus-kb/config/: ontology.yaml
corpus-kb/docs/: ADMIN.md  API.md  FEATURES.md  INGESTION.md  INSTALL.md  W0_POSTGRES_SETUP.md
corpus-kb/mcp-configs/: cursor.json
corpus-kb/migrations/: 001_corpus_schema.sql  002_corpus_rag_schema.sql
corpus-kb/scripts/: check_ci.py  install.py  migrate.py  migrate_to_postgres.py  regenerate_e2e_evidence.py  setup.sh  validate_configs.py  validate_migration.py
corpus-kb/src/: config.py  ontology.py  partitioning.py  server_wiring.py  validators.py
corpus-kb/src/api/: __init__.py  http.py  socket.py
corpus-kb/src/chunking/: __init__.py  unstructured_chunker.py
corpus-kb/src/domain/: __init__.py  aggregates.py  application.py  models.py
corpus-kb/src/extraction/: __init__.py  _langextract_types.py  bert_backend.py  langextract_backend.py  pgml_backend.py  protocol.py  regex_backend.py
corpus-kb/src/graph/: extractor.py
corpus-kb/src/handlers/: __init__.py  command_handler.py  error_handling.py  graph_handler.py  idempotency.py  query_handler.py  tag_handler.py  versioning_handler.py
corpus-kb/src/projections/: __init__.py  checkpoint.py  dlq.py  documents_projection.py  embed_projection.py
corpus-kb/src/rag/: __init__.py  embedder.py
corpus-kb/src/storage/: __init__.py  _lance_typed.py  graph_store.py  lance_store.py  llamaindex_backend.py  rag_backend.py  schema.sql
corpus-kb/src/tools/: ingest_common.py  ingest_tools.py
corpus-kb/src/utils/: models.py
corpus-kb/tests/: conftest.py  test_embedder.py  test_extraction.py  test_fk_integrity.py  test_ingest.py  test_ingest_common.py  test_ingest_degraded.py  test_ingest_e2e.py  test_installer.py  test_integration_e2e.py  test_lance_store.py  test_llamaindex_backend.py  test_mcp_compat.py  test_migrations.py  test_ontology_schema.py  test_partitioning.py  test_reliability.py  test_retrieval.py
corpus-kb/tests/fixtures/: ontology_sample.md  sample.txt
docs/: ADMIN.md  DEVELOPMENT.md  FAQ.md  FEATURES.md  INSTALL.md  ci.md
mcp-configs/: claude-code.json  cursor.json  opencode.json
scripts/: codemap.md  demo.py  setup.ps1  setup.sh  stress_test.py  validate_configs.py
src/: __init__.py  config.py  server.py
src/chunking/: __init__.py  base.py  code_chunker.py  codemap.md  detector.py  hierarchy.py  markdown_chunker.py  text_chunker.py
src/graph/: __init__.py  codemap.md  extractor.py  traversal.py
src/rag/: __init__.py  codemap.md  embedder.py  hybrid_search.py  reranker.py
src/storage/: __init__.py  codemap.md  duckdb_engine.py  graph_store.py  lancedb_store.py
src/tools/: __init__.py  codemap.md  database_tools.py  graph_tools.py  ingest_tools.py  search_tools.py  sql_tools.py  version_tools.py
src/utils/: __init__.py  codemap.md  models.py
tests/: test_chunking.py  test_integration.py  test_rag.py  test_validate_configs.py
