[project]
name = "corpus-kb"
version = "0.1.0"
description = "Local end-to-end RAG system with MCP interface for agentic code editors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Corpus-KB" },
]

dependencies = [
    "mcp[cli]>=1.0",
    "lancedb>=0.12",
    "duckdb>=1.0",
    "ollama>=0.4",
    "pyyaml>=6.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
graphqlite = ["graphqlite>=0.4"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[project.scripts]
corpus-kb = "server:main"
