[project]
name = "corpus-kb"
version = "0.1.0"
description = "Local end-to-end RAG system with MCP interface for agentic code editors"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
    { name = "Michael Oliver" },
]

dependencies = [
    "mcp[cli]>=1.0",
    "ollama>=0.4",
    "pyyaml>=6.0",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-rust>=0.23",
    "tree-sitter-go>=0.23",
    "tree-sitter-java>=0.23",
    "pydantic>=2.0",
    "rich>=13.0",
    "unstructured>=0.13",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "eventsourcing>=9.0",
    "starlette>=0.35",
    "uvicorn>=0.24",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Text Processing :: Indexing",
]

[project.urls]
Homepage = "https://github.com/moliver28/corpus-kb"
Repository = "https://github.com/moliver28/corpus-kb.git"
Documentation = "https://github.com/moliver28/corpus-kb"

[project.optional-dependencies]
graphqlite = ["graphqlite>=0.4"]
langextract = ["langextract"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "pytest-cov>=5.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.pytest.ini_options]
markers = [
    "requires_ollama: mark test as needing a running Ollama service",
    "requires_hi_res: mark test as needing Unstructured hi_res (detectron2)",
]
asyncio_mode = "auto"

[project.scripts]
corpus-kb = "server:main"
